# focusstack

./: .gitignore  FocusStack.py  README.md  focus_stack.py  main.py  setup.cfg
focusstack/: __init__.py  __main__.py  focus_stack.py
tests/: test_focusstack.py
