[metadata]
name = focusstack
author = Charles McGuinness
author_email = charles@mcguinness.us
url = https://github.com/ovinc/focusstack
description =  Focus Stacking of Images
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = focus, stacking, macro, photo, photography
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires =
    >=3
